scrollbar problem fixed

--- a/style/gamer.css
+++ b/style/gamer.css
@@ -106,7 +106,7 @@
 
   .banner-content {
       background-image: url(/images/Group\ 14.png);
-      padding: 100px 300px 80px 100px;
+      padding: 100px 250px 80px 100px;
   }
 
   .banner-sub-title {
@@ -240,13 +240,13 @@
       transition: border linear;
   }
   .icon-box:hover {
-    border: 2px solid #FF42A5;
-    border-radius: 25px;
+    border: 1px solid #FF42A5;
+    border-radius: 20px;
   }
 
   .icon-title {
       color: #0B0223;
-      font-size: 1.125rem;
+      font-size: 1rem;
       font-weight: 600;
       padding: 15px;
   }
